# doc4llm

./: .gitignore  AGENTS.md  AGENT_RAG_v2.4_RELEASE_NOTES.md  API_DOC_OPTIMIZATION.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_VS_OPENCODE_ANALYSIS.md  CONFIG_GUIDE.md  Claude_Code_Best_Practices.md  Claude_Code_Documentation.md  LICENSE  MANIFEST.in  OUTPUT.md  README.md  SEARCH_HELPERS_API_UPDATE.md  analyze_langchain_mermaid.py  debug_bm25.py  debug_count_words.py  debug_doc_content.py  debug_extract_context.py  debug_extract_context_direct.py  debug_extract_detail.py  debug_extract_with_print.py  debug_fix.py  debug_full_flow.py  debug_integration.py  debug_line15.py  debug_mermaid_syntax.py  debug_optimizer.py  debug_placeholder_issue.py  debug_search.py  debug_search2.py  debug_truncate_bug.py  debug_truncate_exact.py  example_flowchart.mmd  json_to_mermaid.py  knowledge_base.json  md-doc-processor.skill  md-doc-reader.skill  mermaid_graph_1.json  (+29 more)
.claude/: .claudeignore  AGENT_OUTPUT_PROTOCOL.md  AOP_INSTRUCTIONS.md  AOP_SUMMARY.md  AOP_TESTS.py  AOP_VALIDATION.py  knowledge_base.json  settings.json
.claude/agents/: doc-qa-agentic.md  doc-rag.md  doc-retriever.back  doc-retriever.md  doc-retriever.md.back
.claude/rules/: aop_handler_rules.md
.claude/scripts/: check-skill-type.py  cleanup-doc-session.sh  doc-retriever-diagnose.sh  doc-retriever-monitor.sh  doc-retriever-optimize.sh  fix-logs-module.sh  log-retrieval.sh  logs-health-check.sh  quick-fix.sh  skill-dispatcher.py  validate-doc-operation.sh
.opencode/: AGENT_OUTPUT_PROTOCOL.md  AOP_SUMMARY.md  knowledge_base.json  opencode.json
.opencode/agents/: doc-rag.md  doc-retriever.md  doc-retriever.md.back
.opencode/scripts/: cleanup-doc-session.sh  doc-retriever-health-check.sh  performance-optimizer.sh  system-recovery.sh  validate-doc-operation.sh
.sisyphus/: boulder.json
.sisyphus/drafts/: agent-upgrade.md  api-doc-fix.md  api_formatter_analysis_report.md  claude-code-hook-context-injection.md  dolphinscheduler-api-analysis.md  fix-silent-flag.md  opencodde-agent-formatter-search.md
.sisyphus/plans/: DolphinScheduler-API-Docs-Analysis.md  (+15 more)
Config/: dolphinscheduler_fixed.json
demo/: demo_extraction.py  dolphinscheduler_api_demo.py
doc4llm/: .env_example  WhiteURLScan.py  __init__.py  cli.py  main.py
doc4llm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
results/: code.claude.com_20260116_220347.csv  code.claude.com_20260117_184630.csv  dolphinscheduler.apache.org_20260204_122949.csv  mp.weixin.qq.com_20260202_174601.csv  opencode.ai_20260122_193912.csv  output.out  url_extration_list.csv
tests/: test_agentic_matcher.py  test_api_doc_formatter.py  test_bm25_matcher.py  test_doc_content_extraction.py  test_doc_extractor.py  test_hybrid_matcher.py
(+432 files in other folders)
