[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc4llm"
version = "2.0.0"
description = "Web URL扫描和信息安全收集工具 - A powerful web URL scanning and information collection tool"
readme = "README.md"
license = "MIT"
authors = [
    {name = "white1434", email = "white1434@users.noreply.github.com"}
]
maintainers = [
    {name = "white1434", email = "white1434@users.noreply.github.com"}
]
keywords = [
    "url-scanner",
    "web-scanner",
    "security-testing",
    "reconnaissance",
    "asset-discovery",
    "vulnerability-scanner",
    "web-crawler",
    "information-gathering",
    "penetration-testing",
    "security-tools"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Internet",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English"
]
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4>=4.11.1",
    "colorama>=0.4.6",
    "requests>=2.32.4",
    "tldextract>=5.1.2",
    "urllib3>=1.26.9",
    "html2text>=2020.1.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/white1434/WhiteURLScan"
Documentation = "https://github.com/white1434/WhiteURLScan/blob/main/README.md"
Repository = "https://github.com/white1434/WhiteURLScan.git"
Issues = "https://github.com/white1434/WhiteURLScan/issues"

[project.scripts]
doc4llm = "doc4llm.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["doc4llm*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
doc4llm = [
    "config/config.json",
    "config/headers.json",
    "filter/*.py",
    "scanner/*.py",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
